--- a/scss/4-pages/home/_hero-shot.scss
+++ b/scss/4-pages/home/_hero-shot.scss
@@ -1,11 +1,12 @@
 .hero-shot {
   color: $text-secondary-color;
-  background-color: #83CDE5;
-  //background-image: url('#{$imagedir}photo-background.jpg');
+  background-image: url('#{$imagedir}IMG_0738-2.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top center;
-  background: linear-gradient(to left, #7b4397, #dc2430);
+  display:block;
+  width: 100%;
+  height: 300%;
 }
 
 
@@ -13,8 +14,6 @@
   .hero-shot {
     min-height: 250px;
     color: $text-secondary-color;
-    background-color: #83CDE5;
-    //background-image: url('#{$imagedir}photo-background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top center;
@@ -22,7 +21,6 @@
   .hero-shot h2{
     float:right;
     background-repeat: no-repeat;
-    //background-image: url('#{$imagedir}graphic.svg');
     background-size: 51%;
     background-position: 48px -6px;
   }
@@ -32,8 +30,6 @@
   .hero-shot {
     min-height: 400px;
     color: $text-secondary-color;
-    background-color: #83CDE5;
-    //background-image: url('#{$imagedir}photo-background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top center;
