Add linear gradient into css

--- a/scss/4-pages/home/_hero-shot.scss
+++ b/scss/4-pages/home/_hero-shot.scss
@@ -1,6 +1,8 @@
 .hero-shot {
   color: $text-secondary-color;
-  background-image: url('#{$imagedir}IMG_0738-2.jpg');
+  background-color: #83CDE5;
+  background: linear-gradient(to left, #7b4397, #dc2430);
+  //background-image: url('#{$imagedir}IMG_0738-2.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top center;
