--- a/static/css/style.css
+++ b/static/css/style.css
@@ -385,9 +385,6 @@ a:hover {
   .inline-list > li {
     margin-left: 0.10rem; } }
 
-.right-off-canvas-menu {
-  background-color: #17beec; }
-
 .logo--footer {
   position: relative;
   top: -20px;
@@ -534,7 +531,8 @@ a:hover {
 
 .hero-shot {
   color: #fff;
-  background-image: url("../img/IMG_0738-2.jpg");
+  background-color: #83CDE5;
+  background: linear-gradient(to left, #7b4397, #dc2430);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top center;
