Add some different colors to the page

--- a/scss/0-tools/_vars.scss
+++ b/scss/0-tools/_vars.scss
@@ -10,7 +10,7 @@ $imagedir:'../img/';
 $primary-color: #17beec;
 $secondary-color: #fed316;
 $accent-blue: #3090B3;        // used in all links and link buttons;
-$accent-blue-bright: #11819d; // used in all links hovers and link hovers buttons;
+$accent-blue-bright: #3b4874; // used in all links hovers and link hovers buttons;
 
 // Standard palette, greys
 $black: #000;
