--- a/scss/3-layout/_footer.scss
+++ b/scss/3-layout/_footer.scss
@@ -8,8 +8,7 @@
 
 
 .footer-site-map {
-  color: $text-color;
-  background-color: #F7F7F7;
+  color: #3b4874;
   font-size: 15px;
   padding: 0 0;
 }
@@ -29,7 +28,7 @@
   color: $text-color;
 }
 .footer-site-map a {
-  color: #ccc;
+  color: #3b4874;
 }
 
 
@@ -55,7 +54,7 @@
   padding: 25px 0;
 }
 .footer-copyright a {
-  color: $text-color;
+  color: #3b4874;
 }
 @media only screen and (min-width: 480px) {
   .footer-copyright a {
