Change color to dark blue on button

--- a/scss/1-base/_buttons.scss
+++ b/scss/1-base/_buttons.scss
@@ -77,3 +77,8 @@ button.tiny, .button.tiny {
   font-size: $base-font-size;
   font-size: 13px;
 }
+
+.btn-primary {
+  background-color: #3b4874;
+  border-color: #3b4874;
+}
