Clean up fonts and label positioning

--- a/scss/1-base/_buttons.scss
+++ b/scss/1-base/_buttons.scss
@@ -3,7 +3,7 @@ button, .button {
   display: inline-block;
   padding: 5px 10px;
   margin: 0 0 0;
-  color: $link-colour !important;
+  color: white;
   font-family: "Source Sans Pro", Verdana, sans-serif;
   font-size: $base-font-size;
   font-weight: 400;
