--- a/scss/2-modules/_mailinglist.scss
+++ b/scss/2-modules/_mailinglist.scss
@@ -13,7 +13,8 @@
 }
 
 .mailing-list {
-  padding: 25px 0;
+  padding-bottom: 25px;
+  padding-top: 25px;
   font-family: "Source Sans Pro", Verdana, sans-serif;
   color: #555555;
   background: #fdcc52; background: -webkit-linear-gradient(#fdcc52, #fdc539); background: linear-gradient(#fdcc52, #fdc539);
