Modified mailinglist button rollover to violet

--- a/scss/1-base/_buttons.scss
+++ b/scss/1-base/_buttons.scss
@@ -82,3 +82,8 @@ button.tiny, .button.tiny {
   background-color: #3b4874;
   border-color: #3b4874;
 }
+
+.btn-primary:hover {
+  background-color: #813a59;
+  border-color: #813a59;
+}
