--- a/scss/0-tools/_vars.scss
+++ b/scss/0-tools/_vars.scss
@@ -7,10 +7,10 @@ $secondaryfont-stack: 'Roboto Slab', serif;
 $imagedir:'../img/';
 
 //Theme colors
-$primary-color: #17beec;
-$secondary-color: #fed316;
-$accent-blue: #3090B3;        // used in all links and link buttons;
-$accent-blue-bright: #3b4874; // used in all links hovers and link hovers buttons;
+$primary-color: #3b4874;
+$secondary-color: #813a59;
+$accent-1: #fdcc52;        // used in all links and link buttons;
+$accent-2: #dc2430;
 
 // Standard palette, greys
 $black: #000;
@@ -28,8 +28,8 @@ $link-colour: $accent-blue;
 $link-active-colour: $accent-blue;
 $link-hover-colour: $accent-blue-bright;
 $link-visited-colour: $accent-blue;
-$button-colour: $secondary-color;
-$button-hover-colour: #FAE389;
+$button-colour: $primary-color;
+$button-hover-colour: $secondary-color;
 $body-text: $grey-1;
 $text-color: $grey-2;                // Standard text colour
 $text-secondary-color: $white;      // Text colour used in most buttons
