--- a/scss/2-modules/_mailinglist.scss
+++ b/scss/2-modules/_mailinglist.scss
@@ -15,7 +15,7 @@
 .mailing-list {
   padding-bottom: 25px;
   padding-top: 25px;
-  font-family: "Source Sans Pro", Verdana, sans-serif;
+  font-family: $basefont-stack;
   color: #555555;
   background: #fdcc52; background: -webkit-linear-gradient(#fdcc52, #fdc539); background: linear-gradient(#fdcc52, #fdc539);
 }
