--- a/scss/3-layout/_header.scss
+++ b/scss/3-layout/_header.scss
@@ -4,7 +4,7 @@
 
 .global-header {
   background-color: $white;
-  font-family: "Source Sans Pro", Verdana, sans-serif;
+  font-family: $basefont-stack;
   position: relative;
   z-index: 2;
 }
