--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,7 +16,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #404040;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: "Source Sans Pro", Verdana, sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 25.5px; }
@@ -129,7 +129,7 @@ em {
   color: #d4d4d4; }
 
 .caption.dark, .article-text figcaption.dark {
-  color: #262626; }
+  color: #000; }
 
 .caption.centered, .article-text figcaption.centered {
   text-align: center; }
@@ -161,7 +161,7 @@ img[data-src] {
   border-color: #813a59; }
 
 a {
-  color: #3090B3;
+  color: #3b4874;
   -moz-transition: color 0.15s;
   -o-transition: color 0.15s;
   -webkit-transition: color 0.15s;
@@ -170,7 +170,7 @@ a {
   outline: 0 !important; }
 
 a:hover {
-  color: #3b4874; }
+  color: #BFBFBF; }
 
 .row.space-top {
   padding-top: 25px; }
