--- a/scss/2-modules/_socialsharing.scss
+++ b/scss/2-modules/_socialsharing.scss
@@ -6,7 +6,13 @@
   .social-sharing.align-left { text-align: left; }
 }
 
-.social-sharing-icon.white { color: #ff0000; }
+.social-sharing-icon.white { 
+  color: $secondary-color; 
+
+  :hover {
+    color: $primary-color;
+  }
+}
 
 .social-sharing-caption {
   font-family: $basefont-stack;
