change color in social sharing styles to fill for svg

--- a/scss/2-modules/_socialsharing.scss
+++ b/scss/2-modules/_socialsharing.scss
@@ -6,11 +6,11 @@
   .social-sharing.align-left { text-align: left; }
 }
 
-.social-sharing-icon.white { 
-  color: $secondary-color; 
+.social-sharing-icon.white {
+  fill: $secondary-color;
 
   :hover {
-    color: $primary-color;
+    fill: $primary-color;
   }
 }
 
