Change hero link color

--- a/scss/0-tools/_vars.scss
+++ b/scss/0-tools/_vars.scss
@@ -40,3 +40,4 @@ $canvas-colour: $grey-4;             // Page background
 //$page-colour: $white;              // The page
 
 $divider-color: $grey-5;
+$hero-links: $accent-1;
