--- a/scss/4-pages/home/_hero-shot.scss
+++ b/scss/4-pages/home/_hero-shot.scss
@@ -8,9 +8,9 @@
 }
 
 a {
-  color: $hero-links;
+  color: $hero-links-colour;
 }
 
 a:hover { 
-  color: $hero-links 
+  color: $hero-links-hover-colour;
 }
