Update link to hero color

--- a/scss/4-pages/home/_hero-shot.scss
+++ b/scss/4-pages/home/_hero-shot.scss
@@ -7,10 +7,10 @@
   height: 300%;
 }
 
-a {
+.hero-shot a {
   color: $hero-links-colour;
 }
 
-a:hover { 
+.hero-shot a:hover { 
   color: $hero-links-hover-colour;
 }
