--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -20,7 +20,7 @@ head
   link(href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700', rel='stylesheet')
   link(rel='stylesheet', type='text/css', href='./css/style.css')
   link(rel='shortcut icon', href='favicon.ico')
-  link(rel='manifest', href='./static/manifest.json')
+  link(rel='manifest', href='./manifest.json')
   meta(property='og:title', content='Roger Ehmpke - Frontend Web Developer')
   meta(property='og:site_name', content=' - Roger Ehmpke')
   meta(property='og:url', content=' - https://www.rogerehmpke.com')
