text entered as test

--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -46,7 +46,7 @@ noscript
       .row
         .col
           h1
-            a.logo--header(href='https://www.rogerehmpke.com') Roger Ehmpke
+            a.logo--header(href='https://www.rogerehmpke.com') Roger Ehmpke god
     section.hero-shot.container-fluid
       .container
         .row.space-top.space-bottom.double
