Major hero changes

--- a/scss/0-tools/_vars.scss
+++ b/scss/0-tools/_vars.scss
@@ -31,7 +31,7 @@ $link-colour: $primary-color;
 $link-active-colour: $primary-color;
 $link-hover-colour: $grey-3;
 $link-visited-colour: $grey-2;
-$button-colour: $primary-color;
+$button-colour: $accent-1;
 $button-hover-colour: $secondary-color;
 $body-text: $grey-1;
 $text-color: $grey-2;                // Standard text colour
