--- a/server/views/projects/project/index.pug
+++ b/server/views/projects/project/index.pug
@@ -1,4 +1,4 @@
-extends ../layout/index
+extends ../../layout/index
 block content
   section#why.services
     .container
@@ -43,32 +43,6 @@ block content
             h3(style='color:#333333;') Code
             p.text-muted
               | design in the browser with HTML(5), CSS(3) and a touch of JavaScript. I love coding things from scratch, but I can work with front-end frameworks like Bootstrap too.
-  section#recomendations
-    .container
-      .row.space-top
-        .col.text-center
-          h2.section-heading(style='color:#333333;') Recomendations
-          hr.primary
-          br
-    .container
-      .row.space-bottom
-        .col-sm-12.col-lg-12.col-md-12.text-center
-          .testimonial-box
-            h3(style='color:#333333;')
-              | Lisa M. Wogan
-              br
-              span(style='font-weight: normal;font-size: 1.3rem;') Economic Development Professional
-            p.text-muted
-              | We came to Roger with a laundry list of needs for a new website. He applied his deep experience in the field, ready familiarity with current solutions and a methodical approach to produce a site that meets, even exceeds, all of our needs. He identified, and proactively addressed, potential system bottlenecks, building a site that is highly functional as well as adaptable. I look forward to working with River Valley Websites on other development projects.
-        br
-        .col-sm-12.col-lg-12.col-md-12.text-center
-          .service-box
-            h3(style='color:#333333;')
-              | Ron Sattar
-              br
-              span(style='font-weight: normal;font-size: 1.3rem;') Business and IT Consultant / Sattar&nbsp;Group
-            p.text-muted
-              | Great working with Roger on various projects.
   // Mailing list additional information for the page
   aside#ContactMe.mailing-list.container-fluid
     .row.align-items-center.justify-content-center
