--- a/server/views/layout/includes/hero.pug
+++ b/server/views/layout/includes/hero.pug
@@ -1,10 +1,12 @@
 section.hero-shot.container-fluid
   .container
-    .row.space-top.space-bottom.double
-      .text-center.col-md-4
-        img.img-fluid(src='/img/roger.jpg', alt="Roger Ehmpke's photo", style='border-radius: 50%;border-width: 5px;border-style: solid;border-color: white;margin:0 auto;')
+    .row.space-top.double
+      .col
+        h1
+          a.logo--header(href='https://www.rogerehmpke.com') Roger Ehmpke
+    .row.space-bottom.double
       .col-md-8
-        h2 Frontend Developer
+        h2 Frontend Web Developer
         p
           | Focused on the field of frontend web development, I live in JavaScript and open source technologies such as Express, Node.js, WebPack and Jekyll. My goal is to obtain remote web development opportunities and/or part-time/contract employment.
         p
@@ -12,8 +14,10 @@ section.hero-shot.container-fluid
         p
           | I live in Kankakee Illinois. I enjoy music, oil painting, and single malt whiskey.
         p
-          | Contact me or reach out via
+          | Contact me or reach out via 
           a(href='https://www.linkedin.com/in/rogerehmpke', target='_blank', rel='noopener') LinkedIn
-          |  or
+          |  or 
           a(href='#ContactMe') send an email
           | .
+      .text-center.col-md-4
+        img.img-fluid(src='/img/roger.jpg', alt="Roger Ehmpke's photo", style='border-radius: 50%;border-width: 10px;border-style: solid;border-color: #242c47;margin:0 auto;')
