--- a/server/views/projects/index.pug
+++ b/server/views/projects/index.pug
@@ -1,90 +1,3 @@
 extends ../layout/index
 block content
-  section#why.services
-    .container
-      .row.space-top
-        .col.text-center
-          h2.section-heading(style='color:#333333;') About
-          hr.primary
-          br
-    .container
-      .row
-        .col-sm-12.col-lg-4.col-md-4.text-center
-          .service-box
-            svg#Diamond.service-icon.wow.bounceIn(version='1.1', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', x='0px', y='0px', viewbox='0 0 40 40', data-wow-delay='.1s', style='enable-background:new 0 0 40 40;')
-              path(d='M4.3,16.3l12,12.8l-5.8-12.8H4.3z M20,31.2l6.7-14.9H13.3L20,31.2z M10.6,13.8l3.9-7.4H9.5L4,13.8H10.6z M23.6,29.1l12-12.8\
-              h-6.2L23.6,29.1z M13.4,13.8h13.2l-3.9-7.4h-5.3L13.4,13.8z M29.4,13.8H36l-5.6-7.4h-5.1L29.4,13.8z M32.1,4.5l7.4,9.9\
-              c0.2,0.2,0.3,0.5,0.3,0.8c0,0.3-0.1,0.6-0.3,0.8L20.9,35.7C20.7,35.9,20.4,36,20,36s-0.7-0.1-0.9-0.4L0.6,15.9\
-              c-0.2-0.2-0.3-0.5-0.3-0.8c0-0.3,0.1-0.6,0.3-0.8l7.4-9.9C8.1,4.1,8.5,4,8.9,4h22.2C31.5,4,31.9,4.1,32.1,4.5z')
-            h3(style='color:#333333;') Ideas
-            p.text-muted
-              | I collaborate with clients and peers to nurture and transform ideas into well thought out design specs. After all, that&apos;s where the majority of amazing user experiences start.
-        .col-sm-12.col-lg-4.col-md-4.text-center
-          .service-box
-            svg#Magic.service-icon.wow.bounceIn(version='1.1', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', x='0px', y='0px', viewbox='0 0 40 40', data-wow-delay='.1s', style='enable-background:new 0 0 40 40;', xml:space='preserve')
-              path(d='M28.3,14.3l7.1-7.1l-2.6-2.6l-7.1,7.1L28.3,14.3z M39.1,7.2c0,0.4-0.1,0.8-0.4,1.1l-31,31c-0.3,0.3-0.7,0.4-1.1,0.4\
-              c-0.4,0-0.8-0.1-1.1-0.4l-4.8-4.8c-0.3-0.3-0.4-0.7-0.4-1.1s0.1-0.8,0.4-1.1l31-31c0.3-0.3,0.7-0.4,1.1-0.4c0.4,0,0.8,0.1,1.1,0.4\
-              l4.8,4.8C38.9,6.4,39.1,6.8,39.1,7.2z M6.5,2.7l2.4,0.7L6.5,4.1L5.8,6.5L5,4.1L2.7,3.4L5,2.7l0.7-2.4L6.5,2.7z M14.9,6.6L19.7,8\
-              l-4.7,1.4l-1.4,4.7L12,9.5L7.3,8L12,6.6l1.4-4.7L14.9,6.6z M37.3,18.1l2.4,0.7l-2.4,0.7l-0.7,2.4l-0.7-2.4l-2.4-0.7l2.4-0.7l0.7-2.4\
-              L37.3,18.1z M21.9,2.7l2.4,0.7l-2.4,0.7l-0.7,2.4l-0.7-2.4l-2.4-0.7l2.4-0.7l0.7-2.4L21.9,2.7z')
-            h3(style='color:#333333;') UX/UI
-            p.text-muted
-              | I sketch and wireframe interfaces focusing on content structure, intuitive UI patterns and simple interactions. I&apos;m a minimalist who truly believes that less is more.
-        .col-sm-12.col-lg-4.col-md-4.text-center
-          .service-box
-            svg#Code.service-icon.wow.bounceIn(version='1.1', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', x='0px', y='0px', viewbox='0 0 40 40', data-wow-delay='.1s', style='enable-background:new 0 0 40 40;', xml:space='preserve')
-              path(d='M12.6,29.5l-1.1,1.1c-0.1,0.1-0.3,0.2-0.5,0.2s-0.4-0.1-0.5-0.2l-10-10c-0.1-0.1-0.2-0.3-0.2-0.5c0-0.2,0.1-0.4,0.2-0.5\
-              l10-10c0.1-0.1,0.3-0.2,0.5-0.2s0.4,0.1,0.5,0.2l1.1,1.1c0.1,0.1,0.2,0.3,0.2,0.5c0,0.2-0.1,0.4-0.2,0.5L4.1,20l8.5,8.5\
-              c0.1,0.1,0.2,0.3,0.2,0.5S12.8,29.3,12.6,29.5z M25.3,6.5l-8,27.8c-0.1,0.2-0.2,0.3-0.3,0.4s-0.3,0.1-0.5,0.1l-1.3-0.4\
-              c-0.2-0.1-0.3-0.2-0.4-0.3c-0.1-0.2-0.1-0.3-0.1-0.5l8-27.8c0.1-0.2,0.2-0.3,0.3-0.4s0.3-0.1,0.5-0.1l1.3,0.4\
-              c0.2,0.1,0.3,0.2,0.4,0.3C25.4,6.1,25.4,6.3,25.3,6.5z M39.5,20.5l-10,10c-0.1,0.1-0.3,0.2-0.5,0.2s-0.4-0.1-0.5-0.2l-1.1-1.1\
-              c-0.1-0.1-0.2-0.3-0.2-0.5s0.1-0.4,0.2-0.5l8.5-8.5l-8.5-8.5c-0.1-0.1-0.2-0.3-0.2-0.5c0-0.2,0.1-0.4,0.2-0.5l1.1-1.1\
-              c0.1-0.1,0.3-0.2,0.5-0.2s0.4,0.1,0.5,0.2l10,10c0.1,0.1,0.2,0.3,0.2,0.5C39.7,20.2,39.6,20.4,39.5,20.5z')
-            h3(style='color:#333333;') Code
-            p.text-muted
-              | design in the browser with HTML(5), CSS(3) and a touch of JavaScript. I love coding things from scratch, but I can work with front-end frameworks like Bootstrap too.
-  section#recomendations
-    .container
-      .row.space-top
-        .col.text-center
-          h2.section-heading(style='color:#333333;') Recomendations
-          hr.primary
-          br
-    .container
-      .row.space-bottom
-        .col-sm-12.col-lg-12.col-md-12.text-center
-          .testimonial-box
-            h3(style='color:#333333;')
-              | Lisa M. Wogan
-              br
-              span(style='font-weight: normal;font-size: 1.3rem;') Economic Development Professional
-            p.text-muted
-              | We came to Roger with a laundry list of needs for a new website. He applied his deep experience in the field, ready familiarity with current solutions and a methodical approach to produce a site that meets, even exceeds, all of our needs. He identified, and proactively addressed, potential system bottlenecks, building a site that is highly functional as well as adaptable. I look forward to working with River Valley Websites on other development projects.
-        br
-        .col-sm-12.col-lg-12.col-md-12.text-center
-          .service-box
-            h3(style='color:#333333;')
-              | Ron Sattar
-              br
-              span(style='font-weight: normal;font-size: 1.3rem;') Business and IT Consultant / Sattar&nbsp;Group
-            p.text-muted
-              | Great working with Roger on various projects.
-  // Mailing list additional information for the page
-  aside#ContactMe.mailing-list.container-fluid
-    .row.align-items-center.justify-content-center
-      .col-lg-4.col-md-4
-        form(action='https://formspree.io/roger@rogerehmpke.com', method='POST', style='margin:0 auto;')
-          .text-center.mb-4
-            h2(style='color:#333333;') Contact
-            p(style='color:#333333;')
-              | Contact me to discuss web development opportunities. I look forward to hearing from you!
-          .form-group
-            input#name.form-control(type='text', name='name', placeholder='Name', required='')
-            label(for='name') Name
-          .form-group
-            input#email.form-control(type='email', name='_replyto', placeholder='Email', required='')
-            label(for='email') Email Address
-          .form-group
-            textarea#message.form-control(name='message', placeholder='Write a message')
-            label(for='message') Message
-          button.btn.btn-lg.btn-primary.btn-block(type='submit') Send
+  include ../includes/mailinglist
