Add skills, work pug  and scss files as well as screen img

--- a/scss/0-tools/_vars.scss
+++ b/scss/0-tools/_vars.scss
@@ -45,3 +45,4 @@ $canvas-colour: $grey-4;             // Page background
 $divider-color: $grey-5;
 $hero-links-colour: $accent-1;
 $hero-links-hover-colour: $accent-1-darkened;
+$label: $secondary-color;
