--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -32,4 +32,5 @@
 @import "2-modules/mailinglist";
 
 @import "4-pages/home/hero-shot";
+@import "4-pages/home/work";
 @import "4-pages/home/services";
