--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -1,7 +1,7 @@
 extends layout/index
 block content
   include includes/about
+  include includes/work
   include includes/services
   include includes/recomendations
   include includes/mailinglist
-  
