Change simlar id

--- a/server/views/includes/about.pug
+++ b/server/views/includes/about.pug
@@ -1,4 +1,4 @@
-section#why.about
+section#About.about
   .container
     .row.space-top
       .col.text-center
@@ -9,4 +9,3 @@ section#why.about
         p
           | I live in Kankakee Illinois. I enjoy music, oil painting, and single malt whiskey.
         br
-  
