--- a/server/views/layout/index.pug
+++ b/server/views/layout/index.pug
@@ -93,5 +93,5 @@ noscript
                   c0-0.6,0.2-1.1,0.7-1.4l18.1-12c0.3-0.2,0.6-0.3,0.9-0.3s0.6,0.1,0.9,0.3l18.1,12C39.5,12.9,39.8,13.4,39.8,14z')
             p
               | &copy; 2019
-              a(href='https://www.rogerehmpke.com') Roger Ehmpke
+              a(href='/') Roger Ehmpke
 include includes/scripts
