--- a/server/views/includes/work.pug
+++ b/server/views/includes/work.pug
@@ -25,7 +25,7 @@
           p.label_language CSS/SASS
           p.label_language HTML
         .view_live_div
-          a.btn.btn-lg.btn-primary.btn-block.buttonlink.view_live(href='http://www.kcc.edu' target='_blank') VIEW LIVE
+          a.btn.btn-lg.btn-primary.btn-block.buttonlink.view_live(href='http://www.kcc.edu' target='_blank' rel='noopener noreferrer') VIEW LIVE
 .work__projectdiv.container
   .row
     .work__projectimgdiv__imgdiv.col-lg-6.col-md-6
