--- a/server/views/layout/includes/hero.pug
+++ b/server/views/layout/includes/hero.pug
@@ -3,16 +3,16 @@ section.hero-shot.container-fluid
     .row.space-top.double
       .col
         h1
-          a.logo--header(href='https://www.rogerehmpke.com') Roger Ehmpke
+          a.logo--header(href='/') Roger Ehmpke
     .row.space-bottom.double
       .col-md-8
         h2 Frontend Web Developer
         p
           | Focused on the field of frontend web development, I live in JavaScript and open source technologies such as Express, Node.js, WebPack and Jekyll. My goal is to obtain remote web development opportunities and/or part-time/contract employment.
         p
-          | Contact me or reach out via 
+          | Contact me or reach out via
           a(href='https://www.linkedin.com/in/rogerehmpke', target='_blank', rel='noopener') LinkedIn
-          |  or 
+          |  or
           a(href='#ContactMe') send an email
           | .
       .text-center.col-md-4
