Fix spacing between project screens and bottom of work

--- a/server/views/includes/work.pug
+++ b/server/views/includes/work.pug
@@ -1,5 +1,5 @@
 .container
-  .row.space-top
+  .row.space-top.space-bottom
     .col.text-center
       h2.section-heading(style='color:#333333;') Work
       p
@@ -27,7 +27,7 @@
         .view_live_div
           a.btn.btn-lg.btn-primary.btn-block.buttonlink.view_live(href='http://www.kcc.edu' target='_blank' rel='noopener noreferrer') VIEW LIVE
 .work__projectdiv.container
-  .row
+  .row.space-bottom.double
     .work__projectimgdiv__imgdiv.col-lg-6.col-md-6
       img(src='/img/kcc-screen.png' width="90%" alt='computer screen with an image of Economic Alliance of Kankakee project')
     .work__projectdiv__description.col-lg-6.col-md-6.text-center
