--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -2,6 +2,6 @@ extends layout/index
 block content
   include includes/about
   include includes/work
-  include includes/services
+  include includes/skills
   include includes/recomendations
   include includes/mailinglist
