--- a/server/views/projects/project/index.pug
+++ b/server/views/projects/project/index.pug
@@ -1,4 +1,4 @@
 extends ../../layout/index
 block content
-  include ../../includes/services
+  include ../../includes/work
   include ../../includes/mailinglist
