--- a/server/views/includes/skills.pug
+++ b/server/views/includes/skills.pug
@@ -4,8 +4,7 @@ section#Skills.skills
       .col.text-center
         h2.section-heading(style='color:#333333;') Skills
         hr.primary
+        h3 I know...
         p
-          | For over 2 decades I have worked with a variety of teams to design and build sites that address business and user needs. I manage sites in higher ed and have maintained sites in the nutritional supplement industry as well. I strive to create usable, polished and performant products through agile workflow, passionate and deliberate design.
-        p
-          | I live in Kankakee Illinois. I enjoy music, oil painting, and single malt whiskey.
-        br
+          | JAVASCRIPT, JQUERY, GITHUB, GIT, GULP, SASS, CSS, HTML,
+          | TERMINAL, RESPONSIVE, BEM
