--- a/scss/4-pages/home/_hero-shot.scss
+++ b/scss/4-pages/home/_hero-shot.scss
@@ -1,6 +1,6 @@
 .hero-shot {
   color: $text-secondary-color;
-  background: linear-gradient(to left, rgba(59, 72, 116, 1.0), rgba(220, 36, 48, 0.8)), url(/img/bg-code.jpg);
+  background: linear-gradient(to left, #3b4874, #dc2430cc), url(/img/bg-code.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top center;
@@ -11,6 +11,6 @@
   color: $hero-links-colour;
 }
 
-.hero-shot a:hover { 
+.hero-shot a:hover {
   color: $hero-links-hover-colour;
 }
