Change screen to Alliance image

--- a/server/views/includes/work.pug
+++ b/server/views/includes/work.pug
@@ -8,7 +8,7 @@
       br
 .work__projectdiv.work__kcc.container
     .row
-      .work__projectimgdiv__imgdiv.col-lg-6.col-md-6
+      .work__projectimgdiv__imgdiv.col-lg-6.col-md-6.col
         img(src='/img/kcc-screen.png' width="90%" alt='computer screen with an image of kcc redesign project')
       .work__projectdiv__description.col-lg-6.col-md-6.text-center
         h3 Kankakee Community College
@@ -29,7 +29,7 @@
 .work__projectdiv.container
   .row.space-bottom.double
     .work__projectimgdiv__imgdiv.col-lg-6.col-md-6
-      img(src='/img/kcc-screen.png' width="90%" alt='computer screen with an image of Economic Alliance of Kankakee project')
+      img(src='/img/kcc-screen2.png' width="90%" alt='computer screen with an image of Economic Alliance of Kankakee project')
     .work__projectdiv__description.col-lg-6.col-md-6.text-center
       h3 Economic Alliance of Kankakee County
       p
