Fix text for small screens in work area

--- a/server/views/includes/work.pug
+++ b/server/views/includes/work.pug
@@ -8,9 +8,9 @@
       br
 .work__projectdiv.work__kcc.container
     .row
-      .work__projectimgdiv__imgdiv.col-lg-6.col-md-6.col
+      .work__projectimgdiv__imgdiv.col-lg-6.col-md-6.col-md-12
         img(src='/img/kcc-screen.png' width="90%" alt='computer screen with an image of kcc redesign project')
-      .work__projectdiv__description.col-lg-6.col-md-6.text-center
+      .work__projectdiv__description.col-lg-6.col-md-6.col-sm-12.text-center
         h3 Kankakee Community College
         p
           | Develop and Architect a user experience for editors and users.
@@ -28,9 +28,9 @@
           a.btn.btn-lg.btn-primary.btn-block.buttonlink.view_live(href='http://www.kcc.edu' target='_blank' rel='noopener noreferrer') VIEW LIVE
 .work__projectdiv.container
   .row.space-bottom.double
-    .work__projectimgdiv__imgdiv.col-lg-6.col-md-6
+    .work__projectimgdiv__imgdiv.col-lg-6.col-md-6.col-sm-12
       img(src='/img/kcc-screen2.png' width="90%" alt='computer screen with an image of Economic Alliance of Kankakee project')
-    .work__projectdiv__description.col-lg-6.col-md-6.text-center
+    .work__projectdiv__description.col-lg-6.col-md-6.col-sm-12.text-center
       h3 Economic Alliance of Kankakee County
       p
         | Redesign there site and provide a better editing experince for the Alliance
