Add non-breaking space to Kankakee County

--- a/server/views/includes/work.pug
+++ b/server/views/includes/work.pug
@@ -31,7 +31,8 @@
     .work__projectimgdiv__imgdiv.col-lg-6.col-md-6.col-sm-12
       img(src='/img/kcc-screen2.png' width="90%" alt='computer screen with an image of Economic Alliance of Kankakee project')
     .work__projectdiv__description.col-lg-6.col-md-6.col-sm-12.text-center
-      h3 Economic Alliance of Kankakee County
+      h3 Economic Alliance of
+        | Kankakee&nbsp;County
       p
         | Redesign there site and provide a better editing experince for the Alliance
       .work__projectdiv__languagebar
