--- a/scss/1-base/_typeography.scss
+++ b/scss/1-base/_typeography.scss
@@ -34,7 +34,11 @@ h1 {
   letter-spacing: -1px;
 }
 
-@media only screen and (min-width: 768px) {
+h2 {
+  font-size: 2.7em;
+}
+
+@media only screen and (min-device-width: 768px) {
   h1 {
     font-size: 32px;
     font-weight: 600;
@@ -43,29 +47,29 @@ h1 {
   }
 }
 
-@media only screen and (max-width: 425px) {
+@media only screen and (max-device-width: 425px) {
   h1 {
     width: 354px;
     margin-bottom: 12px;
     margin-top: 0.4em;
   }
 }
-@media only screen and (max-width: 375px) {
+@media only screen and (max-device-width: 375px) {
   h1 {
     width: 300px;
   }
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-device-width: 320px) {
   h1 {
     width: 256px;
   }
-}
 
-h2 {
-  font-size: 50px;
-  line-height: 1.0;
-  letter-spacing: -0.5px;
+  h2 {
+    font-size: 1.9em;
+    line-height: 1.0;
+    letter-spacing: -0.5px;
+  }
 }
 
 h3 {
