Remove button border color and thickness from buttons

--- a/scss/1-base/_buttons.scss
+++ b/scss/1-base/_buttons.scss
@@ -1,8 +1,7 @@
 .btn-primary {
   background-color: $button-colour;
-  border-color: #242c47;
-  border-radius: 0;
-  border-width: 10px;
+  border-radius: 23px;
+  border-color: $button-colour;
   color: #242c47;
 }
 
