Change mailinglist button to primary blue color

--- a/scss/2-modules/_mailinglist.scss
+++ b/scss/2-modules/_mailinglist.scss
@@ -24,3 +24,9 @@
   font-size: 13px;
   padding-left: 13px;
 }
+
+.mailing-list .btn-primary {
+  background-color: $primary-color;
+  border-color: $primary-color;
+  color: $white;
+}
