change padding in view live button in work section

--- a/scss/4-pages/home/_work.scss
+++ b/scss/4-pages/home/_work.scss
@@ -47,15 +47,11 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 55px;
+  padding: 6px;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  width: 50%;
-}
-
-.buttonlink {
   margin: 0 auto;
-  padding: 0 0;
   text-align: center;
+  width: 50%;
 }
