Add space in between work rows

--- a/server/views/includes/work.pug
+++ b/server/views/includes/work.pug
@@ -7,7 +7,7 @@
       hr.primary
       br
 .work__projectdiv.work__kcc.container
-    .row
+    .row.space-bottom.double
       .work__projectimgdiv__imgdiv.col-lg-6.col-md-12.col-md-12
         img(src='/img/kcc-screen.png' width="90%" alt='computer screen with an image of kcc redesign project')
       .work__projectdiv__description.col-lg-6.col-md-12.col-sm-12.text-center
@@ -25,7 +25,7 @@
           p.label_language CSS/SASS
           p.label_language HTML
         .view_live_div
-          a.btn.btn-lg.btn-primary.btn-block.buttonlink.view_live(href='http://www.kcc.edu' target='_blank' rel='noopener noreferrer') VIEW LIVE
+          a.btn.btn-lg.btn-primary.btn-block.view_live(href='http://www.kcc.edu' target='_blank' rel='noopener noreferrer') VIEW LIVE
 .work__projectdiv.container
   .row.space-bottom.double
     .work__projectimgdiv__imgdiv.col-lg-6.col-md-12.col-sm-12
