fix spelling error EA text

--- a/server/views/includes/work.pug
+++ b/server/views/includes/work.pug
@@ -33,7 +33,7 @@
     .work__projectdiv__description.col-lg-6.col-md-12.col-sm-12.text-center
       h3 Economic Alliance of Kankakee&nbsp;County
       p
-        | Redesign there site and provide a better editing experience for the&nbsp;Alliance
+        | Redesign their site and provide a better editing experience for the&nbsp;Alliance
       .work__projectdiv__languagebar
         p.label_language WORDPRESS
         p.label_language JAVASCRIPT
