Format skills area
include, Languages, Libraries, Servers

--- a/server/views/includes/skills.pug
+++ b/server/views/includes/skills.pug
@@ -5,6 +5,7 @@ section#Skills.skills
         h2.section-heading(style='color:#333333;') Skills
         hr.primary
         h3 I know...
-        p
-          | JAVASCRIPT, JQUERY, GITHUB, GIT, GULP, SASS, CSS, HTML,
-          | TERMINAL, RESPONSIVE, BEM
+        ul
+          li LANGUAGES: JAVASCRIPT, CSS, SASS, HTML, BASH
+          li LIBRARIES: JQUERY, LODASH
+          li SERVERS: NODEJS, NGINX
