Change Work section label padding height and width

--- a/scss/4-pages/home/_work.scss
+++ b/scss/4-pages/home/_work.scss
@@ -24,7 +24,7 @@
 .label_language {
   background: $label;
   color: $text-secondary-color;
-  padding: 5px;
+  padding: 3px 10px;
   margin: 0 5px;
 }
 
