--- a/server/views/includes/skills.pug
+++ b/server/views/includes/skills.pug
@@ -5,7 +5,14 @@ section#Skills.skills
         h2.section-heading(style='color:#333333;') Skills
         hr.primary
         h3 I know...
-        ul
-          li LANGUAGES: JAVASCRIPT, CSS, SASS, HTML, BASH
-          li LIBRARIES: JQUERY, LODASH
-          li SERVERS: NODEJS, NGINX
+        ul.skills-list
+          li
+            span.skill-label LANGUAGES:
+            |  JAVASCRIPT, CSS, SASS, HTML, BASH
+          li
+            span.skill-label LIBRARIES:
+            |  JQUERY, LODASH
+          li
+            span.skill-label SERVERS:
+            |  NODEJS, NGINX
+
