Make heading 3 stand out as did not white

--- a/server/views/includes/skills.pug
+++ b/server/views/includes/skills.pug
@@ -4,7 +4,7 @@ section#Skills.skills
       .col.text-center
         h2.section-heading(style='color:#333333;') Skills
         hr.primary
-        h3 I know...
+        h3.skills-known I know...
         ul.skills-list
           li
             span.skill-label LANGUAGES:
